@@ -37,7 +37,7 @@
 			<screenshot>
 				<mediaobject>
 					<imageobject>
-						<imagedata fileref="&urlfiguresbase;figure-screenshot.png"
+						<imagedata fileref="&urlfiguresbase;rnintroduction-screenshot.png"
 						           format="PNG" />
 					</imageobject>
 					<textobject><phrase>The GNOME Desktop</phrase></textobject>
