@@ -13,7 +13,7 @@
 			with large corporate deployments and situations where machine lockdown is required.
 	</para>
 
-  <sect2>
+  <sect2 id="rnadmin-sabayon">
       <title>Lockdown and User Profile Editor</title>
 		<para>
 			Sabayon allows administrators to set up user profiles inside a live,
@@ -33,7 +33,7 @@
 		<para>TODO: Describe sabayon/pessalus improvements.</para>
   </sect2>
 
-    <sect2>
+    <sect2 id="rnadmin-gdm">
       <title>GDM (GNOME Display Manager)</title>
       <para>GDM now has better utmp/wtmp auditing, so when users log in or log out entries are placed in /var/adm/utmp and /var/adm/wtmp. For instance, this allows programs such as who and finger to use the utmp database to get information about who is on the system. In addition, support for Linux auditing, via libaudit, logs the success or failure of each login attempt with the linux kernel audit system.</para>
       <para>GDM can also now use RBAC (Role Based Access Control) to control access to the Shutdown, Reboot, and Suspend features.</para>
