@@ -21,7 +21,7 @@
 		not have this guarantee, but most remain consistent from release to release.
 	</para>
 
-    <sect2>
+    <sect2 id="rndevelopers-gtk">
       <title>GTK+</title>
       <para>GNOME &gnomeversion; uses version 2.12. of the GTK+ UI toolkit API, which adds new features and important bug-fixes. The largest changes are: </para>
       <itemizedlist>
@@ -38,13 +38,13 @@
       <para>See also the list of <ulink url="http://library.gnome.org/devel/gtk/2.11/ix08.html">new functions in GTK+ 2.12</ulink>. Full details are in a series (see <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00006.html">1</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00003.html">2</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00004.html">3</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00005.html">4</ulink>) of emails from Matthias Clasen, and in the GTK+ 2.12 release announcement. TODO: Link to the announcement when it happens.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rndevelopers-glib">
       <title>Glib</title>
       <para>The Glib utility library now has a g_get_user_special_dir() that provides the path to special folders defined by <ulink url="/FreeDesktop">FreeDesktop</ulink>.org's <ulink url="http://www.freedesktop.org/wiki/Software/xdg-user-dirs">xdg-user-dirs</ulink> specification and tool.</para>
       <para>And for text processing, the new GRegex API provides regular expression string matching without the need for an additional library.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rndevelopers-pango">
       <title>Pango</title>
       <para>The Pango text rendering system has several improvements.</para>
       <para>For instance, it has a new shaping engine for the <ulink url="http://en.wikipedia.org/wiki/N%27ko">N'Ko</ulink> script used by the minority Mande languages in West Africa. These languages have not been well served by computer systems until now.</para>
@@ -77,7 +77,7 @@
       </itemizedlist>
     </sect2>
 
-    <sect2>
+    <sect2 id="rndevelopers-glade">
       <title>Glade</title>
       <para>The Glade user interface designer is much improved, adding user interface and architectural improvements.  </para>
       <para>For instance, tool windows, such as the editor, the inspector, and the palette, are now dockable.</para>
@@ -102,7 +102,7 @@
       <para>Library authors will be pleased to see that new widgets may be declared in the catalog without the need to write supporting source code, allowing developers to use your extra widgets in Glade.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rndevelopers-accerciser">
       <title>Accerciser</title>
       <para>The new accerciser Accessibility Explorer allows you to check whether your application provides the information needed by accessibility tools such as GNOME's Orca screenreader.</para>
 
@@ -116,7 +116,7 @@
 			</figure>
     </sect2>
 
-    <sect2>
+    <sect2 id="rndevelopers-documentation">
       <title>Developer Documentation</title>
       <para>GNOME's new documentation website, <ulink url="http://library.gnome.org">library.gnome.org</ulink>, lists all the latest tutorials, manuals and API references. It's the result of a Google Summer Of Code project which ensures that the online documentation stays up-to-date, even showing several versions of the same documents, in multiple languages too.</para>
       <para>This includes the new <ulink url="http://library.gnome.org/devel/platform-overview/unstable/">Overview of the GNOME Platform</ulink> document, which is now an official part of GNOME's software releases, in the gnome-devel-docs module. It's a good place for new GNOME developers to start.</para>
