@@ -33,7 +33,7 @@
 		There is also <ulink
 		url="http://www.freedesktop.org/Software/jhbuild">jhbuild</ulink> which is
 		designed to build the latest GNOME from CVS. You can also use jhbuild to build
-		GNOME &gnomeversion;.x by using the <filename>gnome-2-14</filename> moduleset.
+		GNOME &gnomeversion;.x by using the <filename>gnome-&gnomeversion;</filename> moduleset.
 	</para>
 
 	<para>
