@@ -16,7 +16,7 @@
 			more exciting user-oriented features in this release of GNOME.
 	</para>
 
-  <sect2>
+  <sect2 id="rnusers-email-and-calendar">
       <title>Email and Calendar</title>
 			<para>GNOME's email and groupware client, Evolution, has received another set of improvements.</para>
 			<para>Evolution now shows an icon in your panel's notification area when you have received a new email. Note that, because this is currently only a plugin which is not yet fully integrated into the main preferences, you need to disable the plugin itself if you would like to disable this feature.</para>
@@ -80,14 +80,14 @@
 			</itemizedlist>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-web-browser">
       <title>Web Browser</title>
 			<para>GNOME's integrated web browser, Epiphany, has been subtly but significantly improved.</para>
 			<para>For instance, inline completion in the address bar is now more intuitive. When you use the cursor keys to select from the drop-down list, the current selection is shown immediately in the entry box, so it's easier to see what address will be used when you press enter. This drop-down menu lists addresses from both your history and bookmarks, and it now shows the web site icons (favicons) for history items, as it already did for bookmark items.</para>
 			<para>By popular request, there's a new &quot;smooth scrolling&quot; preference that makes it easier to see where to continue reading when scrolling large web pages. It is not enabled by default because several users have reported that it can cause eye strain.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-eog">
       <title>Image Viewing</title>
 			<para>GNOME's image viewer, eog, is now faster and more stable. The new image properties dialog provides easy access to basic information and metadata for your images, and now includes XMP (Extensible Metadata Platform) data that your camera or software might store in your image files, along with the existing EXIF data. This might include location, copyright information, license, and tags.</para>
 			<para>And you can now easily open an image in another application, such as the GIMP, by using the new &quot;Open with...&quot; menu item. When you've made your changes and saved the file then your picture will be updated in the image viewer automatically. This is also available in the new right-click menu in the image collection pane, along with other useful actions.</para>
@@ -103,7 +103,7 @@
 
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-evince">
       <title>Document Viewer</title>
 			<para>GNOME's Evince viewer, for PDF and Postscript files now supports interactive PDF forms, allowing you to enter information into a PDF that you receive, and page rendering is now noticeably faster.</para>
 			
@@ -119,7 +119,7 @@
 			<para>You can also now save images from PDF documents and print documents with multiple PDF pages per sheet.  </para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-sound-and-video">
       <title>Sound and Video</title>
 			<para>Not all distributions like to install all multimedia codecs by default, due to the need to obtain patent licenses for some codecs in some countries. This means that applications can not always read every file format by default. But applications such as GNOME's video player, Totem, can now offer these new codecs to the user for installation. This is actually implemented by your distribution, which may make its own decisions about how to obtain the codecs. Here's how it looks in Ubuntu Linux:</para>
 
@@ -135,7 +135,7 @@
 			<para>Totem's support for embedded videos in web pages has also improved, supporting more web pages, showing a pulsing play button when you need to press play to start the video, and now allowing you to go into full-screen mode from the web page.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-tomboy">
       <title>Note-Taking</title>
 			<para>Tomboy, the GNOME note taking application, has also added some significant new features, the first of which is note synchronization. Tomboy can now use WebDAV or ssh to connect to a remote server and synchronize all the notes that a user has made. This allows for users who use multiple computers to keep one set of synchronized notes between all the machines. Simple conflict resolution between the server and the Tomboy clients ensures that there is no data loss in case of a note conflict.</para>
 			<figure>
@@ -150,7 +150,7 @@
 			<para>Furthermore, Tomboy now remembers yours open notes, showing them again when you restart the application.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-gedit">
       <title>Text Editing</title>
 			<para>GNOME's simple but powerful text editor, gedit, has an all-new syntax-highlighting system which now supports syntax highlighting for scripting languages such as PHP and Ruby even when embedded in HTML, as well as highlighting of text such as &quot;TODO&quot; or &quot;FIXME&quot; inside code comments, and highlighting of gtk-doc source code documentation.</para>
 			<para>You can even choose from several color schemes in case you are already familiar with the colors used by a different text editor. (TODO: gimp up a screenshot of gedit &quot;Font &amp; Colors&quot; preferences with two stacked gedit windows, one with the &quot;Classic&quot; style scheme and one with the &quot;Oblivion&quot; style scheme.)</para>
@@ -165,7 +165,7 @@
 			</figure>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-file-management">
       <title>File Management</title>
 			<para>The file chooser dialog now shows the recent files list and can use desktop search systems such as Beagle or Tracker, making it easier to find your files when you need them, without interruption.</para>
 
@@ -204,13 +204,14 @@
 			<para>The file-roller archive manager can now open and save archives from networked locations, such as mounted ssh:// servers, by using the same gnome-vfs system that is already used by other GNOME applications. It is also now possible to copy/paste and drag-and-drop files between archives.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-panel">
       <title>Panel</title>
 			<para>The GNOME Panel can be seen at the top and bottom of your screen in most distributions. It has some small but helpful improvements in GNOME &gnomeversion;. For instance, the Window List applet no longer resizes its buttons whenever the length of window titles change. For instance, this avoids annoying resizes when changing tabs in your web browser. And the Window Selector applet now sorts its drop-down list by workspace.</para>
 			<para>Users of &quot;floating panels&quot; (which don't expand to fill the whole screen width) might notice that these panels now remain in the correct position and alignment when changing screen resolution. More work to improve the repositioning of panel applets when changing screen resolution is planned for GNOME 2.22.</para>
       <para/>
     </sect2>
-    <sect2>
+
+    <sect2 id="rnusers-control-panel">
       <title>Control Panel</title>
 			<para>For GNOME &gnomeversion;, the control panels have been reorganized slightly to reduce the number of control panels, making it easier to find what you need.</para>
 			<para>For instance, this release marks the debut of the new Appearance control panel applet. The Theme, Background, Fonts, and Interface applets have been merged to create this new applet, simplifying the Preferences menu.</para>
@@ -238,7 +239,7 @@
 			<para>Wireless users may also welcome the new support for WPA encryption in the Network control panel.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-password-management">
       <title>Password Management</title>
 			<para>The GNOME Keyring system remembers your passwords for networked servers and web sites. In GNOME &gnomeversion;, the keyring is unlocked automatically when you login and when you unlock your screen, avoiding the need for an extra password prompt. Note, however, that this feature requires some work by your distribution. You can now also change your keyring's master password via the Encryption Preferences control panel, in the GNOME Keyring tab.</para>
 
@@ -263,7 +264,7 @@
 			</figure>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-help">
       <title>Help System</title>
 			<para>This release has seen some large changes in the infrastructure of the GNOME help browser (yelp), improving the style and layout.  In addition, the colors now better match your current theme.</para>
 			<para>Help pages also now appear more quickly, as individual pages are now loaded on demand instead of the entire manual being parsed unnecessarily.</para>
@@ -278,7 +279,7 @@
 			</figure>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-power-management">
       <title>Power Management</title>
 			<para>GNOME's Power Manager now saves profile information about your batteries over time, to provide a far more accurate estimation of the time remaining, even with old worn-out batteries.</para>
 
@@ -294,7 +295,7 @@
 			<para>Several parts of GNOME, such as the volume mixer have also been corrected to remove unnecessary <ulink url="http://bugzilla.gnome.org/show_bug.cgi?id=152864">polling</ulink>, resulting in power savings.</para>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-login-and-screensaver">
       <title>Login and Screensaver</title>
 			<para>Users could already choose their preferred language when logging in to GNOME, but now they can even see the login screen in their own language as soon as they choose it, thanks to an improved GDM (Gnome Display Manager).</para>
 			<para>The GNOME Screensaver now allows people to leave you a note while your screen is locked, by clicking the &quot;Leave Message&quot; button. You'll see these messages when you login.</para>
@@ -309,7 +310,7 @@
 			</figure>
     </sect2>
 
-    <sect2>
+    <sect2 id="rnusers-rtl">
       <title>Right-To-Left Languages</title>
 			<para>Languages such as Arabic and Hebrew are written from right to left. Users of these languages expect most user interface elements to be similarly mirrored, compared to left-to-right user interfaces. GNOME &gnomeversion; improves the support in the following ways when using these languages: </para>
 			<itemizedlist>
