@@ -1,3 +1,15 @@
+2007-09-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/release-notes.xml:
+	* docbook/C/figures/:
+	Renamed figure-screenshot.png to rnintroduction-screenshot.png, 
+	trying to get the new file version to be installed on the server.
+	* docbook/C/rnadmins.xml:
+	* docbook/C/rndevelopers.xml:
+	* docbook/C/rninstallation.xml:
+	* docbook/C/rnusers.xml: Added sect2 IDs, hopefully making the 
+	table of contents work.
+
 2007-09-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* docbook/C/release-notes.xml: Added a warning that this is a draft.
